DigicielFull/force-app/main/default/objects/SFDC_Strategy2Oppty__c/SFDC_Strategy2Oppty__c.object-meta.xml
<CustomObject>
    <description>Junction object that ties an Account Strategy to an Opportunity.</description>
    <label>Strategic Opportunity</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Strategic Opp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>