DigicielFull/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Opportunity_Actual_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Actual_Bill_Date__c</fullName>
    <formula>Opportunity_Name__r.Actual_Billed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Actual Bill Date</label>
    <type>Date</type>
</CustomField>