DigicielFull/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>Opportunity_Name__r.CloseDate</formula>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>