DigicielFull/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Opportunity_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Value__c</fullName>
    <formula>Opportunity_Name__r.Contract_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>