DigicielFull/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Opportunity_Estimated_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Estimated_Bill_Date__c</fullName>
    <formula>Opportunity_Name__r.Estimated_Billed_Date__c</formula>
    <label>Opportunity Estimated Bill Date</label>
    <type>Date</type>
</CustomField>