DigicielFull/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>TEXT(Opportunity_Name__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>